elements/pfe-accordion/BaseAccordionPanel.scss
:host { 
  --pf-c-accordion--BackgroundColor: var(--pf-global--BackgroundColor--light-100, #fff);
  --_accordion__expanded-content--Color: var(--pf-global--Color--dark-200, #6a6e73);
  --_accordion__expanded-content--FontSize: var(--pf-global--FontSize--sm, 0.875rem);
  --_accordion__expanded-content--m-expanded__expanded-content-body--before--BackgroundColor: var(--pf-global--primary-color--100, #06c);
  --_accordion__expanded-content--m-fixed--MaxHeight: 9.375rem;
  --_accordion__expanded-content-body--PaddingTop: var(--pf-global--spacer--sm, 0.5rem);
  --_accordion__expanded-content-body--PaddingRight: var(--pf-global--spacer--md, 1rem);
  --_accordion__expanded-content-body--PaddingBottom: var(--pf-global--spacer--sm, 0.5rem);
  --_accordion__expanded-content-body--PaddingLeft: var(--pf-global--spacer--md, 1rem);
  --_accordion__expanded-content-body--expanded-content-body--PaddingTop: 0;
  --_accordion__expanded-content-body--before--BackgroundColor: transparent;
  --_accordion__expanded-content-body--before--Width: var(--pf-global--BorderWidth--lg, 3px);
  --_accordion__expanded-content-body--before--Top: 0;
  color: var(--pf-global--Color--100, #151515);
  background-color: var(--pf-c-accordion--BackgroundColor);
}

.content {
  font-size: var(--_accordion__expanded-content--FontSize);
  color: var(--_accordion__expanded-content--Color);
}
:host([fixed]) {
  max-height: var(--_accordion__expanded-content--m-fixed--MaxHeight);
  overflow-y: auto;
}
.content[expanded],
:host([expanded]) .content {
  --_accordion__expanded-content-body--before--BackgroundColor: var(--_accordion__expanded-content--m-expanded__expanded-content-body--before--BackgroundColor);
}

.body {
  position: relative;
  padding: var(--_accordion__expanded-content-body--PaddingTop) var(--_accordion__expanded-content-body--PaddingRight) var(--_accordion__expanded-content-body--PaddingBottom) var(--_accordion__expanded-content-body--PaddingLeft);
}
.body::after {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: var(--_accordion__expanded-content-body--before--Width);
  content: "";
  background-color: var(--_accordion__expanded-content-body--before--BackgroundColor);
}
.body + .body {
  --_accordion__expanded-content-body--PaddingTop: var(--_accordion__expanded-content-body--expanded-content-body--PaddingTop);
}

